--- a/NavUp-app/gradle/wrapper/gradle-wrapper.properties
+++ b/NavUp-app/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Mar 31 11:18:08 GMT+02:00 2017
+#Wed Apr 05 09:53:06 CAT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
