--- a/NavUp-app/app/build.gradle
+++ b/NavUp-app/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:10.2.1'
+    compile 'com.android.support:cardview-v7:25.+'
+    compile 'com.android.support:recyclerview-v7:25.+'
 }
