--- a/NavUp-app/app/src/main/AndroidManifest.xml
+++ b/NavUp-app/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"
+            android:label="NavUP"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -86,6 +86,7 @@
         <activity android:name=".UpdatePOIActivity">
         </activity>
 
+
         <activity
             android:name=".SettingsMainActivity"
             android:label="@string/title_activity_setting"
@@ -97,19 +98,17 @@
         <activity
             android:name=".NotificationActivity"
             android:label="@string/title_activity_notifications"
-            android:parentActivityName=".SettingsMainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SettingsMainActivity" />
-        </activity>
+            android:parentActivityName=".SettingsMainActivity" />
         <activity
             android:name=".InterestPointActivity"
             android:label="Points of Interest"
-            android:parentActivityName=".SettingsMainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SettingsMainActivity" />
-        </activity>
+            android:parentActivityName=".SettingsMainActivity" />
+
+         <activity android:name=".Events"></activity>
+        <activity android:name=".Upcoming_Events" />
+        <activity android:name=".MyEvents" />
+        <activity android:name=".Admin_Add_Event" />
+        <activity android:name=".Admin_Events"></activity>
 
     </application>
 
